grid spacing issues

--- a/web/themes/custom/glazed_subtheme/css/style.css
+++ b/web/themes/custom/glazed_subtheme/css/style.css
@@ -963,6 +963,22 @@ section#block-views-block-landing-carousels-block-1 {
     padding-top: 17px;
 }
 
+/* ----- 31-Aug-2022 ------ */
+#rocket .view-id-rocket_product_images .product-main-images .product-banner-section {
+    height: 550px;
+}
+
+#rocket .view-id-rocket_product_images .product-main-images .product-banner-section img {
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+}
+
+#rocket .view-id-rocket_product_images .az-ctnr.container {
+    width: auto;
+}
+
+/* ----- 31-Aug-2022 ------ */
 @media only screen and (max-width: 1200px) {
     .row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .views-view-grid .views-col {
         width: 50% !important;
@@ -983,6 +999,13 @@ section#block-views-block-landing-carousels-block-1 {
         width: 100% !important;
         padding-right: 0px;
         margin: 1rem 0px 0px;
+    }
+
+    .page-node-type-landing-page .row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .views-view-grid .views-col {
+        padding-left: 4px;
+        width: 50% !important;
+        padding-right: 4px;
+        margin: 0px;
     }
 
     .row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .landing-list-item {
@@ -1041,11 +1064,24 @@ button.owl-prev.disabled {
         margin-left: -15px;
         margin-right: -15px;
     }
+
+    .page-node-type-landing-page .row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .views-view-grid .views-col {
+        padding-left: 0px;
+        width: 100% !important;
+        padding-right: 0px;
+        margin: 1rem 0px 0px;
+    }
+
 }
 
 @media only screen and (max-width: 767px) {
     .custom-defence-node .col-sm-4 {
         width: 100%;
+    }
+
+    #rocket .view-id-rocket_product_images .product-banner-title {
+        height: auto;
+        padding: 0.6rem 1rem;
     }
 }
 
@@ -1204,5 +1240,5 @@ body.path-search ol li p:last-child {
 }
 
 section#block-views-block-product-related-block-1 {
-	padding-bottom: 60px !important;
+    padding-bottom: 60px !important;
 }
